--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,19 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <main>
-        <h1>{{ title }}
+{% extends "base.html" %}
 
-        </h1>  
-        <a href="/login">Login</a>
-    </main>
-  </body>
-</html>
+{% block title %}Home{% endblock %}
+
+{% block content %}
+    <h1>{{ title }}</h1>
+    <p>The sum of 1 and 4 is {{ sum }}</p>
+    <a href="/login">Login</a>
+{% endblock %}
