--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -5,5 +5,5 @@
 {% block content %}
     <h1>{{ title }}</h1>
     <p>Please login to continue.</p>
-    <a href="/home">Home</a>
+    <a href="/">Home</a>
 {% endblock %}
