--- a/src/frontend/templates/home.html
+++ b/src/frontend/templates/home.html
@@ -5,5 +5,5 @@
 {% block content %}
     <h1>{{ title }}</h1>
     <p>The sum of 1 and 4 is {{ sum }}</p>
-    <a href="/login">Login</a>
+    <a href="/form">Form</a>
 {% endblock %}
