--- a/src/frontend/templates/form.html
+++ b/src/frontend/templates/form.html
@@ -15,7 +15,7 @@
 <body>
     <form action="/submit" method="post">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="nameInput" name="nameInput" required>
         <button type="submit">Submit</button>
     </form>
 </body>
